# sims4you

./: .flake8  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  settings.py
monkey_patches/tensorlayer/models/: core.py
src/: main.py
src/ai/imitator/: config.py  data.py  dcgan.py  train.py
src/commander/ipc/: client.py
src/commander/ipc/utils/: screenshot_utils.py
src/commands/inject/: inject.py
src/commands/ipc/: client.py
src/imitator/scripts/: data.py  facial_modifiers.json  randomize_facial_attributes.py
src/imitator_mod/: compile.py
src/imitator_mod/scripts/: data.py  facial_casps.json  facial_modifiers.json  facial_sculpts.json  randomize_facial_attributes.py
src/utils/: compiler.py  data.py  windows_build.py
src/utils/injector/: inject_python.cpp  injector.py
tensorlayer/models/: core.py
tests/: test_code_injection.py  utils.py
